[tool.poetry]
name = "metody-numeryczne"
version = "0.1.0"
description = ""
authors = ["JSiuda1 <jakkub68@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
bitarray = "^2.9.2"
sympy = "^1.12"
scipy = "^1.13.1"
pillow = "^10.3.0"
opencv-python = "^4.10.0.82"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
